--- a/Homepage.html
+++ b/Homepage.html
@@ -7,9 +7,18 @@
 <body>
     <h1><strong>PREMIUM AUTOMOBILES</strong></h1>
 
-    <h6><a href="Cars" target="_blank">Cars</a></h6>
+    <hr/>
+    <h2>Garages</h2>
+    
+    <button type="button" id="buttonGarages"><a href="Cars" target="_blank">View Garages</a></button>
+    <div id="singleOutput"></div>
+    <hr/>
 
-    <h6><a href="Cars" target="_blank">Garages</a></h6>
+    <h2>Vehicles</h2>
+    <button type="button" id="buttonVehicles"><a href="Cars" target="_blank">View Vehicles</a></button>
+    <hr/>
+
+    
 
 
 
