--- a/garages.html
+++ b/garages.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>Garages</title>
+    <title>"Our Garages"</title>
 </head>
 <body>
     <br/>
@@ -18,19 +18,19 @@
     <br/>
     <br/>
     <br/>
-    <form method="get" action="./search.html">
-        <h2>Select Garage</h2>
-        <select id="selectGarage" name="garages">
-            <option value="london">London</option>
-            <option value="glasgow">Glasgow</option>
-            <option value="brighton">Brighton</option>
-            <option value="manchester">Manchester</option>
-        </select>
-    </form>
+    <!-- <form method="get" action="./search.html"> -->
+        <!-- <h2>Select Garage</h2> -->
+        <!-- <select id="selectGarage" name="garages"> -->
+            <!-- <option value="london">London</option> -->
+            <!-- <option value="glasgow">Glasgow</option> -->
+            <!-- <option value="brighton">Brighton</option> -->
+            <!-- <option value="manchester">Manchester</option> -->
+        <!-- </select> -->
+    <!-- </form> -->
     <br/>
     <div id="singleOutput"></div>
     <br/>
-    <form method="post" action="./index.html">
+    <!-- <form method="post" action="./garages.html"> -->
         <h2>Create Garage</h2> 
         <input id="createGarage" type="text" placeholder="Enter your new location">
         <button id="createButton" type="submit">Create</button>
